Criada a página de cadastro de cliente, atribuindo funcionalidades aos botões, alertas e utilizando a mesma para introduzir informações ao db.json.

--- a/HTML Files/index.css
+++ b/HTML Files/index.css
@@ -30,7 +30,7 @@ a{
 }
 
 li a{
-    color: white;
+    color: rgb(81, 169, 228);
     text-align: center;
     align-items: center;
     padding: 36px 30px;
@@ -40,6 +40,7 @@ li a{
 
 li a:hover:not(.active){
     background-color: darkblue;
+    color: white;
 }
 
 iframe{
