--- a/CSS Files/index.css
+++ b/CSS Files/index.css
@@ -4,17 +4,58 @@ body{
     margin: 0;
 }
 
-.container-menu{
-    background-color: red;
+ul{
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    overflow: hidden;
 }
 
-.container-menu_links{
-    font-display: none;
+.container-menu{
+    margin: 0;
+    list-style: none;
+    height: 10vh;
+    padding: 0;
+    
+    background-color: rgb(49, 46, 46);
+}
+
+li{
+    float: left;
+    font-size: 25px;
+}
+
+a{
+    font-family: 'Franklin Gothic Medium';
+}
+
+li a{
+    color: rgb(81, 169, 228);
+    text-align: center;
+    align-items: center;
+    padding: 36px 30px;
+    text-decoration: none;
+    overflow: hidden;
+}
+
+li a:hover:not(.active){
+    background-color: darkblue;
+    color: white;
 }
 
 iframe{
     border: 0;
     width: 100%;
-    height: 80vh;
+    height: 85vh;
+}
+
+.rodape{
+    position: absolute;
+    background-color: gray;
+    color: white;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
